# jupyter-python-template

./: .gitignore  .python-version  Justfile  flake.nix  pyproject.toml  readme.org
lib/: __init__.py  utils.py
notebooks/: Untitled.ipynb
